# dp-poc

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
app/: main.py
app/event_system/: __init__.py
app/event_system/domain/: __init__.py  broker_port.py  consumer_port.py  events.py  publisher_port.py  queue_port.py
app/event_system/infrastructure/: __init__.py  in_memory_broker.py  in_memory_consumer.py  in_memory_publisher.py  in_memory_queue.py  multiprocess_queue.py
app/event_system/utils/: __init__.py  topic_matcher.py
app/executor/: __init__.py
app/executor/domain/: __init__.py  executable_task.py  execution_context.py  execution_result.py  execution_state.py  execution_state_repository_port.py  orchestrator.py  task_result.py  task_status.py  worker_pool_manager_port.py
app/executor/infrastructure/: __init__.py  multiprocess_executor.py  multiprocess_pool_manager.py  orchestrator.py  task_executor.py  worker.py
app/io_manager/: __init__.py
app/io_manager/domain/: __init__.py  io_manager_port.py
app/io_manager/infrastructure/: __init__.py  filesystem_io_manager.py
app/planner/: README.md  __init__.py
app/planner/domain/: __init__.py  dag.py  dag_analyzer.py  dag_builder.py  dag_hasher.py  dag_validator.py  execution_plan.py  node.py  planner.py  schema_validator.py
app/scheduler/: HOW_API_TRIGGER_WORKS.md  README.md  __init__.py
app/scheduler/api/: __init__.py  example_fastapi.py  fastapi_integration.py
app/scheduler/domain/: __init__.py  scheduler_port.py  trigger_port.py
app/scheduler/infrastructure/: __init__.py  cron_trigger.py  event_trigger.py  manual_trigger.py  scheduler.py  trigger_factory.py
app/task_registry/: README.md  __init__.py  decorator.py
app/task_registry/domain/: __init__.py  registry_port.py  task_model.py
app/task_registry/infrastructure/: __init__.py  excutable_task.py  task_registry.py
app/task_registry/utils/: __init__.py  schema_utils.py
examples/: planner_example.py  schema_extraction_demo.py  schema_validator_example.py  task_registry_example.py
tests/: __init__.py  conftest.py  test_benchmark.py  test_broker.py  test_consumer.py  test_integration.py  test_publisher.py  test_topic_pattern.py
tests/benchmark/: test_benchmark.py
tests/event_system/: test_dag_execution_event.py  test_integration.py  test_multiprocess_queue.py  test_queue.py
tests/executor/: fixtures.py  test_executable_task.py  test_execution_context.py  test_execution_result.py  test_multiprocess_executor.py  test_simple_integration.py  test_task_executor.py  test_task_result.py  test_task_status.py  test_tasks.py
tests/io_manager/: __init__.py  test_filesystem_io_manager.py
tests/planner/: test_planner.py  test_schema_validator.py
tests/scheduler/: test_scheduler.py  test_trigger_factory.py  test_triggers.py
tests/task_registry/: test_schema_utils.py  test_task_registry.py
